# devops

./: hello.txt
smart_home/: .gitignore  main.py  output.txt  schedule.json  split.py
sql_build/: Readme.md
sql_build/clearvagrant/: Vagrantfile
sql_build/linux/: CMakeLists.txt  Dockerfile
sql_build/sqlbuild/: Dockerfile  Vagrantfile
sql_build/sqlbuild/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
sql_build/vagdock/: Vagrantfile  install_docker.yml
sql_build/windows/: CMakeLists.txt
tutorial_courses/basic web/input/: index.html  script.js  style.css
work/leak_down/: log.txt
